--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -1733,7 +1733,7 @@ tab7.13_combined$rowPct <- round(100*tab7.13_combined$count/tab7.13_combined$tab
 ```
 
 ```{r tab7.13_disp, echo = F}
-knitr::kable(tab7.13_combined[    c('ageCat', 'count','tab7.13_total.count','countPct', 'rowPct')], 
+knitr::kable(tab7.13_combined[    c('ageCat', 'count','tab7.13_total.count','columnPct', 'rowPct')], 
             col.names = c("Age Group","Frequency Missing Race1 & Hispanic","Total Frequency","Column Percent", "Row Percent"), row.names=FALSE, 
             format.args = list(big.mark = ","))
 ```
