--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -1894,7 +1894,7 @@ tab9_avg_pats <- odbc::dbGetQuery(con,
       order by year(adate)")) %>% 
   arrange(year) %>% 
   group_by(year) %>% 
-  summarise_all(list(mean, median, min, max))%>% 
+  summarise_all(list(mean = mean, median = median, min = min, max = max))%>% 
   mutate(
     pats_val = paste0(median, "(", min, ", ", max, ")")
   )
