--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -2490,37 +2490,9 @@ knitr::kable(tab18, col.names = c("Number of unique patient IDs", "Number of uni
  close(sqldb)
 endTime <- Sys.time()
 endTime - startTime 
-```title: "P1 QA with new REL questions"
+```
+title: "P1 QA with new REL questions"
 author: "Emily Bacon"
-date: "10/3/2019"
+date: "10/23/2019"
 output: word_document
----
-
-```{r setup2, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-title: "P1 QA report with new REL questions"
-author: "Emily Bacon"
-date: "6/4/2019"
-output: html_document
 ---
